<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <item
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/btn_newch"
        app:showAsAction="ifRoom"
    >
    	<menu>
    	    <item
    	        android:id="@+id/basch"
    	        android:title="@string/btn_basch"
    	    />
    	    <item
    	        android:id="@+id/advch"
    	        android:title="@string/btn_advch"
    	    />
    	</menu>
    </item>
    <item
        android:id="@+id/save"
        android:icon="@android:drawable/ic_menu_save"
        android:title="@string/btn_savech"
        app:showAsAction="ifRoom"    
    />
	<item android:id="@+id/setts"
	    android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/btn_setts"
        app:showAsAction="ifRoom"
    />
</menu>