<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>
	<LinearLayout
	    android:id="@+id/editor"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:layout_margin="7dp"
	>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_nm"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <AutoCompleteTextView
	            android:id="@+id/ch_nm"
	            android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1"
	            android:ems="10"
	            android:hint="@string/diag_nm_hnt"
	        >
	            <requestFocus />
	        </AutoCompleteTextView>
	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    >
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_key"
	            android:layout_gravity="center_vertical"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	        />
	    	<HorizontalScrollView
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content" >
            	<LinearLayout
               		android:id="@+id/keys"
    	            android:layout_width="wrap_content"
  	           	    android:layout_height="wrap_content"
  	                android:orientation="horizontal" >
            	</LinearLayout>
        </HorizontalScrollView>
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >
	
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_act"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <Button
	            android:id="@+id/ch_act"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/diag_act"
	        />

	    </LinearLayout>
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	    >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_md"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <Button
	            android:id="@+id/ch_md"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/diag_md"
	        />
	    </LinearLayout>

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content" >

	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_au"
	            android:textAppearance="?android:attr/textAppearanceMedium" />

	        <Button
	            android:id="@+id/ch_au"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:text="@string/diag_au" />
	    </LinearLayout>

	    <CheckBox
	        android:id="@+id/ch_ccl"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/diag_ccl"
	    />
	</LinearLayout>
</ScrollView>