<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/xeed.xposed.cbppmod"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/diag_cur_key"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/key"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:gravity="center_horizontal"
        >
        </EditText>

        <ToggleButton
            android:id="@+id/tgl_itc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textOn="@string/diag_tgl_itc"
            android:textOff="@string/diag_tgl_itc" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/key_dn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/key_pressed"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diag_dl"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_margin="5dp"
        />

        <xeed.library.view.TextSeekBar
            android:id="@+id/key_dl"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:max="5000"
            app:textSuffix="ms"
            app:textValueMult="50" />

    </LinearLayout>

</LinearLayout>
