<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/xeed.xposed.cbppmod"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingRight="1dp"
    android:requiresFadingEdge="vertical"
>
        <android.support.v7.widget.GridLayout
            android:id="@+id/editor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="6dp"
        >
	        <TextView
                android:layout_width="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_nm"
	            android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="0"
                app:layout_gravity="center_vertical"
            />
	        <AutoCompleteTextView
                app:layout_gravity="fill_horizontal"
	            android:id="@+id/ch_nm"
	            android:ems="10"
	            android:hint="@string/diag_nm_hnt"
                app:layout_column="1"
                app:layout_row="0"
	        />
	        <TextView
                android:layout_width="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_key"
	            android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="1"
                app:layout_gravity="center_vertical"
            />
    	    <HorizontalScrollView
                app:layout_column="1"
                app:layout_row="1"
                app:layout_gravity="fill_horizontal"
                android:layout_width="0dp"
                android:requiresFadingEdge="horizontal"
            >
                	<LinearLayout
                   		android:id="@+id/keys"
        	            android:layout_width="wrap_content"
      	           	    android:layout_height="wrap_content"
      	                android:orientation="horizontal"
                    />
            </HorizontalScrollView>
	        <TextView
                android:layout_width="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_act"
	            android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="2"
                app:layout_gravity="center_vertical"
            />
	        <Button
	            android:id="@+id/ch_act"
	            android:text="@string/diag_act"
                app:layout_column="1"
                app:layout_row="2"
                app:layout_gravity="fill_horizontal"
	        />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:text="@string/diag_rep"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="3"
                app:layout_gravity="center_vertical"
            />
            <LinearLayout
                android:orientation="vertical"
                app:layout_column="1"
                app:layout_row="3"
                app:layout_gravity="fill_horizontal"
                android:paddingBottom="5dp"
            >
                <CheckBox
                    android:id="@+id/ch_rep_md"
                    android:text="@string/ch_rep_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                />
                <xeed.xposed.cbppmod.viw.TextSeekBar
                    android:id="@+id/ch_rep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="5dp"
                    android:max="10"
                    android:text="@string/diag_rep"
                    app:textSuffix=""
                    app:textValueMult="1"
                />
            </LinearLayout>
	        <TextView
                android:layout_width="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_vib"
	            android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="5"
                app:layout_gravity="center_vertical"
	        />
	        <xeed.xposed.cbppmod.viw.TextSeekBar
	            android:id="@+id/ch_vib"
	            android:text="@string/diag_vib"
	            android:max="100"
	            app:textValueMult="10"
	            app:textSuffix="ms"
                app:layout_column="1"
                app:layout_row="5"
                app:layout_gravity="fill_horizontal"
	        />
	        <TextView
                android:layout_width="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_md"
	            android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="6"
                app:layout_gravity="center_vertical"
            />
	        <Button
	            android:id="@+id/ch_md"
	            android:text="@string/diag_md"
                app:layout_column="1"
                app:layout_row="6"
                app:layout_gravity="fill_horizontal"
	        />
	        <TextView
                android:layout_width="wrap_content"
	            android:layout_marginEnd="5dp"
	            android:layout_marginRight="5dp"
	            android:text="@string/diag_au"
	            android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="7"
                app:layout_gravity="center_vertical"
            />
	        <Button
	            android:id="@+id/ch_au"
	            android:text="@string/diag_au"
                app:layout_column="1"
                app:layout_row="7"
                app:layout_gravity="fill_horizontal"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/diag_pl"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="8"
                app:layout_gravity="center_vertical"
            />
            <Button
                android:id="@+id/ch_pl"
                android:text="@string/diag_pl"
                app:layout_column="1"
                app:layout_row="8"
                app:layout_gravity="fill_horizontal"
            />
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/diag_not"
                android:textAppearance="?android:attr/textAppearanceMedium"
                app:layout_column="0"
                app:layout_row="9"
                app:layout_gravity="center_vertical"
            />
            <Button
                android:id="@+id/ch_not"
                android:text="@string/diag_not"
                app:layout_column="1"
                app:layout_row="9"
                app:layout_gravity="fill_horizontal"
            />
            <CheckBox
                android:id="@+id/ch_scr"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_row="10"
                android:text="@string/diag_scr"
            />
    	    <CheckBox
    	        android:id="@+id/ch_ccl"
    	        app:layout_column="0"
    	        app:layout_columnSpan="2"
    	        app:layout_row="11"
    	        android:text="@string/diag_ccl"
            />
            <Button
                android:id="@+id/ch_adv_cnv"
                app:layout_column="0"
                app:layout_columnSpan="2"
                app:layout_row="12"
                app:layout_gravity="fill_horizontal"
                android:text="@string/diag_adv_cnv"
            />
	   </android.support.v7.widget.GridLayout>
</ScrollView>